--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -23,8 +23,7 @@ nginx_skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpres
 php_version: "7.4"
 php_memory_limit: 256M
 php_extensions_custom:
-  php7.4-imagick: "{{ apt_package_state }}"
-  # php7.4-soap: "{{ apt_package_state }}"
+  php7.4-soap: "{{ apt_package_state }}"
 
 # WP-Cli
 # wp_cli_packages:
