--- a/deploy-hooks/finalize-after.yml
+++ b/deploy-hooks/finalize-after.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install Wordpress
+  command: wp core install --url="{{ project.site_hosts | map(attribute='canonical') | first }}" --title={{ site }} --admin_user=admin.creame --admin_email=servicios+{{ site }}@crea.me --skip-email
+  args:
+    chdir: "{{ deploy_helper.current_path }}"
+  when: wp_installed.rc != 0
+
 - block:
   - name: Remove WordPress transient containing old release path
     shell: "{{ project.multisite.enabled | default(false) | ternary('wp network meta delete 1', 'wp option delete') }} _site_transient_theme_roots ||:"
