--- a/deploy-hooks/initialize-after.yml
+++ b/deploy-hooks/initialize-after.yml
@@ -2,7 +2,7 @@
 - name: Web root directory exists?
   stat:
     path: "{{ deploy_helper.current_path }}"
-  register: initialize_after_current_path
+  register: deploy_current_path
 
 - name: WordPress Installed (non-multisite)?
   block:
@@ -10,41 +10,36 @@
       command: wp core is-installed --skip-plugins --skip-themes
       args:
         chdir: "{{ deploy_helper.current_path }}"
-      register: initialize_after_wp_installed_singlesite
+      register: wp_installed_singlesite
       changed_when: false
-      failed_when: initialize_after_wp_installed_singlesite.stderr | length > 0 or initialize_after_wp_installed_singlesite.rc > 1
+      failed_when: wp_installed_singlesite.stderr | length > 0 or wp_installed_singlesite.rc > 1
 
     - name: Set "WordPress installed?" result variable (from non-multisite)
       set_fact:
-        initialize_after_wp_installed: "{{ initialize_after_wp_installed_singlesite }}"
+        wp_installed: "{{ wp_installed_singlesite }}"
   when:
-    - initialize_after_current_path.stat.exists
+    - deploy_current_path.stat.exists
     - not project.multisite.enabled | default(false)
 
 - name: WordPress Installed (multisite)?
   block:
-    - name: Create file with multisite constants defined as false
-      copy:
-        src: "tmp_multisite_constants.php"
-        dest: "{{ deploy_helper.shared_path }}/tmp_multisite_constants.php"
-
     - name: Set variables used in "WordPress Installed (multisite)?" check
       set_fact:
-        php_needle_warning: "Warning: strpos\\(\\): Empty needle in {{ deploy_helper.current_path }}/web/wp/wp-includes/link-template.php"
+        multisite_non_setup_db_error: "WordPress database error Table '{{ site_env.db_name }}.wp_blogs' doesn't exist"
 
     - name: "Invoke 'wp core is-installed' command"
-      command: wp core is-installed --skip-plugins --skip-themes --require={{ deploy_helper.shared_path }}/tmp_multisite_constants.php
+      command: wp core is-installed --skip-plugins --skip-themes
       args:
         chdir: "{{ deploy_helper.current_path }}"
-      register: initialize_after_wp_installed_multisite
+      register: wp_installed_multisite
       changed_when: false
-      failed_when: (initialize_after_wp_installed_multisite.stderr | length > 0 and initialize_after_wp_installed_multisite.stderr is not match(php_needle_warning)) or wp_installed_multisite.rc > 1
+      failed_when: (wp_installed_multisite.stderr | length > 0 and wp_installed_multisite.stderr is not match(multisite_non_setup_db_error)) or wp_installed_multisite.rc > 1
 
     - name: Set "WordPress installed?" result variable (from multisite)
       set_fact:
-        initialize_after_wp_installed: "{{ initialize_after_wp_installed_multisite }}"
+        wp_installed: "{{ wp_installed_multisite }}"
   when:
-    - initialize_after_current_path.stat.exists
+    - deploy_current_path.stat.exists
     - project.multisite.enabled | default(false)
 
 - name: Backup WordPress database before new deploy
@@ -53,5 +48,5 @@
     chdir: "{{ deploy_helper.current_path }}"
   changed_when: false
   when:
-    - initialize_after_current_path.stat.exists
-    - initialize_after_wp_installed.rc == 0
+    - deploy_current_path.stat.exists
+    - wp_installed.rc == 0
