Enable HSTS for subdomains

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -18,6 +18,7 @@ letsencrypt_contact_emails:
 # Nginx
 nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
 nginx_skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in|woocommerce_[a-z0-9_]+
+nginx_hsts_include_subdomains: true
 
 # PHP
 php_version: "8.0"
