--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -56,6 +56,11 @@ project_shared_children:
   - path: web/app/cache
     src: cache
 
+# Custom copy folders
+project_copy_folders:
+  - vendor
+  - web/app/languages
+
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
 #   - vault_wordpress_sites.*.*_salt    -- matches vault_wordpress_sites.example.com.env.secure_auth_salt etc.
