--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -25,7 +25,7 @@ h5bp_expires_enabled: true
 # PHP
 php_version: "8.2"
 php_memory_limit: 256M
-php_error_reporting: 'E_ALL & ~E_DEPRECATED & ~E_STRICT & ~E_NOTICE & ~E_WARNING'
+php_error_reporting: "E_ALL & ~E_DEPRECATED & ~E_STRICT & ~E_NOTICE & ~E_WARNING"
 php_extensions_custom:
   php8.2-soap: "{{ apt_package_state }}"
   php8.2-gd: "{{ apt_package_state }}"
