Habilitar la limpieza de fuentes APT en la configuración

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -6,7 +6,7 @@ apt_packages_custom:
   jpegoptim: "{{ apt_package_state }}"
   optipng: "{{ apt_package_state }}"
   webp: "{{ apt_package_state }}"
-apt_clean_sources: false
+apt_clean_sources: true
 composer_keep_updated: true
 ntp_timezone: Etc/UTC
 ntp_manage_config: true
